--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html>
 <head>
 <title>箱庭独ソ戦ver1</title>
-<script src="055Scenario00.js"></script>
-<script src="055Scenario01.js"></script>
-<script src="055Scenario100.js"></script>
-<script src="055Misc.js"></script>
-<iframe src="056Map.html" id="if1" title="iframe_1" style="position:absolute; top:0px;left:0px;" width="650" height="650"></iframe>
-<script src="056CodeA.js"></script>
+<script src="Scenario00.js"></script>
+<script src="Misc.js"></script>
+<iframe src="Map.html" id="if1" title="iframe_1" style="position:absolute; top:0px;left:0px;" width="650" height="650"></iframe>
+<script src="CodeA.js"></script>
 </head>
 <body>
 
@@ -61,8 +59,8 @@
 <table border=0 style="position:absolute; top:690px;left:30px;border-collapse:collapse;"><form name="For06">
 <tr><td><input name="Tex00" type="text" size="40" value="未使用"></td></tr></form></table>
 
-<script src="056CodeB.js"></script>
-<script src="055Event.js"></script>
+<script src="CodeB.js"></script>
+<script src="Event.js"></script>
 
 <!--Scenario00.js-->
 <!--Scenario01.js-->
